feat: update rbac and auth rest endpoints
